gitops/apps/media/whisparr/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whisparr.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: whisparr
          port: 6969
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whisparr.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: whisparr
          port: 6969
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-nzbget-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whisparr-nzbget.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: whisparr-nzbget
          port: 6789
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-nzbget-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whisparr-nzbget.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: whisparr-nzbget
          port: 6789
  tls: {}
